# openclaw-py-m3

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SOUL.md  docker-compose.yml  openclaw.agnes.yaml  pyproject.toml  start_lark_sync.py
.github/workflows/: ci.yml
docs/: deployment.md  plugin-development.md
examples/: full_stack_demo.py  hello_agent.py  lark_config_wizard.py  lark_e2e_mock.py  lark_run.py  lark_send_probe.py  lark_smoke.py  p4_agnes_smoke.py  phase5_smoke.py  phase6_smoke.py  phase7_smoke.py  phase8_smoke.py  phase9_smoke.py  tools_demo.py
examples/skills/joke/: SKILL.md  skill.py
examples/skills/system_status/: SKILL.md  skill.py
examples/skills/weather/: SKILL.md  skill.py
openclaw/: __init__.py  cli.py
openclaw/agent/: __init__.py  executor.py  journal.py  loop.py  multi_agent.py  planner.py
openclaw/audit/: __init__.py  gateway_exposure.py  install_policy.py
openclaw/bus/: __init__.py  redis_bus.py
openclaw/channels/: __init__.py  base.py  cli.py  discord.py  imessage.py  lark.py  lark_wizard.py  signal.py  slack.py  telegram.py  whatsapp.py
openclaw/cli/: __init__.py  __main__.py  context.py  errors.py  factory.py  http.py  output.py
openclaw/cli/commands/: __init__.py  agent.py  agents.py  channels.py  completion.py  config.py  cron.py  doctor.py  gateway.py  health.py  journal.py  lark_cli.py  logs.py  mcp.py  memory.py  message.py  models.py  plugins.py  run.py  sandbox.py  secrets.py  security.py  sessions.py  skills.py  status.py  system.py  tasks.py  tools.py  update.py  version.py
openclaw/config/: __init__.py  settings.py
openclaw/core/: __init__.py  auto_reply.py  config.py  errors.py  logging.py  plugin.py  rate_limit.py  sanitize.py  skills.py
openclaw/gateway/: __init__.py  app.py  auth.py  deps.py  errors.py  message_store.py  metrics.py  util.py
openclaw/gateway/routes/: __init__.py  channels.py  chat.py  health.py  journal.py  memory.py  sessions.py  skills.py  tools.py
openclaw/gateway/static/: __init__.py  dashboard.html  legacy.html
openclaw/llm/: __init__.py  base.py
openclaw/memory/: __init__.py  long_term.py  scoped.py  short_term.py  soul.py  workspace.py
openclaw/providers/: __init__.py  anthropic.py  factory.py  gemini.py  ollama.py  openai_compat.py  router.py
openclaw/tools/: __init__.py  registry.py
openclaw/tools/builtin/: __init__.py  cron.py  datetime.py  docker.py  fs.py  http.py  playwright_tool.py  shell.py  web.py
ops/: prometheus.yml
tests/: conftest.py  test_agent.py  test_cli.py  test_cli_align.py  test_cli_phase26.py  test_imports.py  test_phase1.py  test_phase10.py  test_phase12.py  test_phase13.py  test_phase14_audit.py  test_phase14_sanitize.py  test_phase15_misc.py  test_phase15_multi_agent.py  test_phase15_providers.py  test_phase15_redis_bus.py  test_phase16_rereview.py  test_phase18_dockerfile.py  test_phase19_ci_yml.py  test_phase19_windows_shell.py  test_phase2.py  test_phase20_journal.py  test_phase21_playwright.py  test_phase22_dashboard.py  test_phase23_chat_thread.py  test_phase25_async_io.py  test_phase25_auth_failfast.py  test_phase25_concurrency_fixes.py  test_phase25_discord_pynacl.py  test_phase25_lark_async.py  test_phase25_memory_per_user.py  test_phase25_memory_safety.py  test_phase25_review_followup.py  test_phase25_secrets_cors.py  test_phase25_tool_schema.py  test_phase27_review_fixes.py  test_phase28_review_fixes.py  test_phase29_review_fixes.py  test_phase3.py  test_phase30_review_fixes.py  (+10 more)
