[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-py"
version = "0.1.0"
description = "Python reimplementation of OpenClaw: an async AI Agent runtime with multi-channel messaging, tool calling, and persistent memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "openclaw-py contributors" }]
keywords = ["ai", "agent", "llm", "openclaw", "feishu", "lark", "telegram"]
# 核心 runtime 依赖:不依赖任何 LLM / 特定 channel / 特定存储
# provider / channel / memory backend 都是可选 extras
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
    "orjson>=3.10",
    "tenacity>=8.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
# LLM providers(都可选)
openai = []                              # openai_compat 走 httpx 即可,无需 SDK
anthropic = ["anthropic>=0.30"]
gemini = ["google-generativeai>=0.8"]
all-providers = ["openclaw-py[anthropic,gemini]"]

# Channel adapters
lark = ["lark-oapi>=1.2"]
all-channels = ["openclaw-py[lark]"]

# Memory backends
chroma = ["chromadb>=0.5"]
sqlite-vec = []                           # 走 stdlib sqlite3,无需 extra
all-memory = ["openclaw-py[chroma]"]

# API server
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
]

# 杂项
redis = ["redis>=5.0"]
docker = ["docker>=7.1"]
playwright = ["playwright>=1.44"]
scheduler = ["apscheduler>=3.10"]
fs-watch = ["watchdog>=4.0", "aiofiles>=23.2"]

# 聚合
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "openclaw-py[all-providers,all-channels,all-memory,server,redis,docker,scheduler,playwright,fs-watch]",
]

[project.scripts]
openclaw = "openclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=openclaw",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=70",
]
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/*"]
