[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-py"
version = "0.1.0"
description = "Python reimplementation of OpenClaw: an async AI Agent runtime with multi-channel messaging, tool calling, and persistent memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "openclaw-py contributors" }]
keywords = ["ai", "agent", "llm", "openclaw", "feishu", "lark", "telegram"]
# 核心 runtime 依赖:不依赖任何 LLM / 特定 channel / 特定存储
# provider / channel / memory backend 都是可选 extras
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version<'3.11'",
    "orjson>=3.10",
    "tenacity>=8.2",
    "structlog>=24.1",
    # Phase 25 / a4:Tool Registry 强制校验 LLM 输出的 JSON Schema
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# LLM providers(都可选)
openai = []                              # openai_compat 走 httpx 即可,无需 SDK
anthropic = ["anthropic>=0.30"]
gemini = ["google-generativeai>=0.8"]
all-providers = ["openclaw-py[anthropic,gemini]"]

# Channel adapters
lark = ["lark-oapi>=1.2"]
all-channels = ["openclaw-py[lark]"]

# Memory backends
chroma = ["chromadb>=0.5"]
sqlite-vec = []                           # 走 stdlib sqlite3,无需 extra
all-memory = ["openclaw-py[chroma]"]

# API server
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
]

# 杂项
redis = ["redis>=5.0"]
docker = ["docker>=7.1"]
playwright = ["playwright>=1.44"]
scheduler = ["apscheduler>=3.10"]
fs-watch = ["watchdog>=4.0", "aiofiles>=23.2"]

# 聚合
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "openclaw-py[all-providers,all-channels,all-memory,server,redis,docker,scheduler,playwright,fs-watch]",
]

[project.scripts]
openclaw = "openclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=openclaw",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=60",
]
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
exclude = ["examples/", "tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["examples/*"]

# Phase 30 / E6 修复:启用 B/S/ASYNC 规则集,自动捕获以下问题:
#   B   = bugbear   (常见 bug,如 B006 mutable default / B023 loop var)
#   S   = bandit    (安全审计,如 S603 subprocess.Popen 不带 shell=True)
#   ASYNC = flake8-async (async/await 错用,如 ASYNC230/240 blocking IO)
# 引入 review 报告明确要求的三类;其他规则集(UP/C4/PIE/RUF 等)留作
# 后续 PR 渐进引入,避免一次性 233 个 violation 压垮 diff。
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "ASYNC",  # flake8-async
]
ignore = [
    # S101 — 测试里 assert 是合法的
    "S101",
    # S105/S106 — 测试 fixture 用硬编码密码
    "S105",
    "S106",
    # E501 — 已有 line-length=100 限制
    "E501",
    # B008 — FastAPI 函数参数在 default 表达式里调用,这是 FastAPI 推荐用法
    "B008",
    # S603 — cron / shell 工具里 subprocess 是设计内用法,加 # noqa: S603
    # 全局忽略以避免误报
    "S603",
    # S104 — gateway 0.0.0.0 绑定是 phase 25 明确允许的(deployment 文档)
    "S104",
    # S108/S112 — 测试用 tempfile 是合规的
    "S108",
    "S112",
    # B904 — except 链 raise 加上 from None 防外露敏感信息,有时更合适
    "B904",
]

[tool.ruff.lint.per-file-ignores]
# tests/ 里允许 S (硬编码 / 测试密钥)、ANN(类型注解)、D(文档)
"tests/**/*.py" = ["S", "ANN", "D"]
# examples/ 整体跳过
"examples/**" = ["B", "S", "ASYNC"]
